Able to plot the values.

--- a/index.html
+++ b/index.html
@@ -41,31 +41,9 @@
             <button type="submit" class="submit-collatz">Try it out!</button>
         </form>
 
-        <canvas id="collatz-chart" width="400" height="800"></canvas>
-        <!-- <script>
-            // Chart js config
-            const labels = "Number of integers";
-            const data = {
-                labels: labels,
-                datasets: [{
-                    label: 'My First Dataset',
-                    data: [65, 59, 80, 81, 56, 55, 40],
-                    fill: false,
-                    borderColor: 'rgb(75, 192, 192)',
-                    tension: 0.1
-                }]
-            };
+        <div class="collatz-chart-container">
 
-            const config = {
-                type: 'line',
-                data: data,
-            };
-
-            const myChart = new Chart(
-                document.getElementById('collatz-chart'),
-                config
-            );
-        </script> -->
+        </div>
     </main>
     <footer></footer>
     <script src="./script.js"></script>
